src/assets/scss/app.scss
@import "settings";
@import "foundation";
@import "customMixins";

body {
	font-size: rem-calc(16px);

	a {
		color: rgb(212, 212, 212);
		&:hover {
			color: rgb(212, 212, 212);
		}
	}

	.uiview {
		input {
			background-color: lighten($primary-color, 2%);
			border-color: #101010;
			color: $body-font-color;
			font-size: rem-calc(14px);
			//box-shadow: 0 1px 1px rgba(255, 255, 255, 0.1);
			&:hover, &:focus {
				background-color: lighten($primary-color, 1%);
				border-color: #101010;
				color: $body-font-color;
			}
		}
		.form-label {
			border-color: #101010;
			background-color: darken($primary-color, 1%);
			color:  rgb(159, 159, 159);
		}
	}
}

.pageTitle {
	a {
		position: relative;
		strong {
			padding-left: 40px;
		}
		img {
			position: absolute;
			top: 50%;
			margin: 0 !important;
			margin-top: -18px !important;
			left: 10px;
			display: inline-block;
			height: 36px;
		}
	}

	&.desktop {
		@include max-screen(420px){
			display: none;
		}
	}
}
.menu-bar {
	border-bottom: 1px solid $primary-color;
}
.menu-bar {
	@include max-screen(900px){
		li a {
			font-size: rem-calc(16px);
			padding: 0.75rem;
		}
	}
	@include max-screen(700px){
		li a {
			font-size: rem-calc(14px);
			padding: 0.75rem;
		}
	}
	@include max-screen(580px){
		li a {
			padding: 0.5rem;
		}
	}

	.disclaimer {
	}
	.disclaimerTitle {
		position: absolute;
		top: 0px;
		right: 0px;
	}
	.scheduleTitle {
		position: absolute;
		top: 8px;
		right: 75px;
		a.schedule {
			display: inline-block;
			background: url('../img/calendar-small.png') no-repeat center center;
			background-size: 28px;
			margin: 0;
			&:hover {
				background: transparent url('../img/calendar-small.png') no-repeat center center;
				background-size: 28px;
			}
		}
		@include mq($max-width: 900px){
			a.schedule {
				padding: 1rem;
			}
			top: 4px;
		}
	}
	.optionsTitle {
		position: absolute;
		right: 130px;
		top: 11px;
		img, a {
			margin: 0;
			padding: 0;
		}
		svg.iconic.iconic-md:not(.iconic-size-sm):not(.iconic-size-lg), svg.iconic.iconic-size-md {
			width: 28px;
			height: 28px;
			margin: 0;
		}
		@include mq($max-width: 900px){
			top: 6px;
		}
	}
}

.grid-container {
	//max-width: 98rem;
	max-width: 93rem;
	//max-width: 190vh;
	padding: 1rem;
	@include mq($min-width: 2100px) {
		max-width: 103rem;
	}
	@include mq($min-width: 2300px) {
		max-width: 116rem;
	}
}
.grid-container-118rem {
	max-width: 118rem !important;
	@include mq($min-width: 2100px) {
		max-width: 128rem !important;
	}
	@include mq($min-width: 2300px) {
		max-width: 141rem !important;
	}
}
.grid-content .grid-block {
	margin: 0;
}
.tab-contents {
	padding: 1rem 0;
}

.uiview {
	padding: 0 !important;
}

.content {
	padding: 1rem;

}
.min-height-600 {
	min-height: 600px;
}

.broadcastState {
	color: red;
	display: inline-block;
	border: 1px solid red;
	border-radius: 1px;
	padding-left: 5px;
	padding-right: 5px;
}

.content.grid-block {
	padding: 1rem 0;
}

.vlist-controls {
	margin: 0;
	input {
		height: 2rem;
		min-width : 100px;
	}
	span {
		margin: 0;
	}
	.button {
		margin: 0 0 0 .5rem;

	}
	input, span, .button {
		@include mq($max-width: 600px){
			font-size: rem-calc(12px);
		}
	}
	.hide-switch {
		padding-right: 4px;
	}
}

.hide-700 {
	@include mq($max-width: 700px){
		display: none !important;
	}
}

.videolist-container {
	font-size: rem-calc(14px);
	margin: 0 -5px !important;
	//border: 1px solid #ededed;

	.videolist-item {
		border: 1px solid #101010;
		box-shadow: 0 1px 1px rgba(255, 255, 255, 0.1);
		flex: 0 0 206px;
		padding: 5px;
		margin: 5px;
		position: relative;

		.hover-play {
			width: 100%;
			height: 100%;
			opacity: 0;
			background-color: rgba(0,0,0,.5);
			position: absolute;
			top: 0;
			left: 0;
			div {
				opacity: 1;
				width: 100%;
				height: 100%;
				background: url('../img/play-button-silhouette-big-red.png') no-repeat center center;
			}
		}

		&:hover {
			background: rgba(255,255,255,.05);
			box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);

			.hover-play {
				opacity: 1;
			}
		}
	}
	.duration {
		position: absolute;
		bottom: 3px;
		right: 3px;
		font-size: rem-calc(11px);
		background-color: rgba(0,0,0,.8);
		border-radius: 4px;
		padding: 3px;
	}
	.vimage {
		position: relative;
		max-height: 110px;
		img {
			height: 110px;
			width: 196px;
		}
	}
	.vtitle {
		padding: 4px 0 4px 0;
	}
	.vdate {
		color: rgb(159, 159, 159);
		font-size: rem-calc(12px);
		display: inline-block;
		width: 100%;
	}
}

.notification {
	position: absolute;
	bottom: 30px;
	left: 30px;
	background-color: $primary-color;

	span.title {
		font-size: rem-calc(14px);
		padding: 1rem;
	}
}

#chatPanel {
	margin-top: 49px;
	@include mq($max-width: 900px){
		margin-top: 41px;
	}
	@include mq($max-width: 579px){
		margin-top: 33px;
	}
}

.chat-view {
	position: relative;
	iframe {
		position: absolute;
	}
}

.screenWidthCheck-640 {
	display: none;
	visibility: hidden;

	@include mq($max-width: 640px){
		display: block;
	}
}

.video-chat-controls {
	margin: 5px 0 6px 0;

	.switch-view {
		margin: 0;
		img {
			margin-top: 4px;
		}
	}
	.toggle-chat {
		flex-direction: row-reverse;
	}
	.show-reverse {
		display: none;
	}
	.views {
		font-size: rem-calc(14px);
		svg.iconic.iconic-sm:not(.iconic-size-md):not(.iconic-size-lg) {
			width: 12px;
			height: 12px;
			margin-bottom: 2px;
		}
	}
}
.video-chat-control-reverse {
	flex-direction: row-reverse;
	.toggle-chat {
		flex-direction: row;

		.icon {
			display: none;
			&.show-reverse {
				display: inline;
			}
			svg {
				transform: scaleX(-1);
			}
		}
		.toggleChatButton {
			text-align: left;
		}
	}
	.play-live {
		flex-direction: row-reverse;
		.playLiveButton {
			background-position: right;
			padding-left: 0;
			padding-right: 30px;
		}
	}
	.switch-view img {
		transform: scaleX(-1);
	}
}


.thumb {
	img {
		opacity: .7;
		&:hover {
			opacity: 1;
		}
	}
	&.up {

	}
	&.down img {
		transform: rotate(180deg);
	}
}

.video-title {
	.part, .date {
		background-color: rgba(0,0,0,.2);
		padding: 2px 4px;
		font-size: rem-calc(16px);
		color: darken(rgb(212, 212, 212), 20%);
		box-shadow: inset 0 0 1px rgba(0,0,0,.5);
	}
}

.playLiveButton, .toggleChatButton {
	display: block;
	height: 30px;
	padding: 0.5rem 0;
	@include mq($max-width: 640px){
		font-size: rem-calc(12px);
		line-height: 19px;
	}
}

.toggleChatButton {
	text-align: right;
	margin-right: 6px;
	svg.iconic.iconic-fluid {
		height: 20px !important;
		width: 30px !important;
	}
}

.playLiveButton {
	text-align: left;
	background-size: 24px;
	background: url('../img/play-button-silhouette.png') no-repeat left 3px;
	padding-left: 30px;
}

.live-container {
	display: flex;

	.right {
		flex: 0 0 400px;
	}
	.left {
		flex: 1;
	}
}
.flex-row-reverse {
	flex-direction: row-reverse;
}


.embed-responsives {
	position: relative;
	display: block;
	height: 0;
	padding: 0;
	overflow: hidden;
}

.embed-responsive.embed-responsive-16by9 {
	padding-bottom: 56.25%;
}

.embed-responsive-item, .embed-responsive iframe {
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	width: 100%;
	height: 100%;
	border: 0;
}

.embed-responsive {
	position: relative;
	padding-bottom: 56.25%;
	padding-top: 25px;
	height: 0;

	iframe {
		position: absolute;
		top: 0;
		left: 0;
		width: 100%;
		height: 100%;

	}
}

.calendar {
	margin-top: 49px !important;
	.daySpacer {
		text-align: center;
		padding: 0.8rem;
		border-top: 1px solid lighten($primary-color, 2%);
		h6 {
			margin: 0;
			width: 100%;
		}
		background: linear-gradient(to bottom,
				lighten($primary-color, 4%) 0%,
				lighten($primary-color, 2%) 41%,
				$primary-color 100%,
				lighten($primary-color, 2%) 41%,
				lighten($primary-color, 4%) 0%);

	}
	.calendar-item {
		font-size: rem-calc(12px);
		border-top: 1px solid lighten($primary-color, 2%);

		&.even {
			background-color: lighten($primary-color, 1%);
		}

		&.active {
			background-color: lighten($primary-color, 5%);
			//border-color: lighten($primary-color, 5%);
			border: 1px solid #77001f;

			.time, .description {
				box-shadow: inset 0 0px 1px rgba(255, 255, 255, 0.1);
			}
		}

		&.pastEvent, &.pastEvent .label {
			text-decoration: line-through;
			color: rgb(159, 159, 159);

			.status {
				background-color: darken(rgb(159, 159, 159), 50%) !important;
			}
		}

		.time, .description {
			display: flex;
			justify-content: center;
			flex-direction: column;
		}

		.time {
			flex: 0 0 50px;
			text-align: center;
			padding: .8rem 0;
			border-right: 1px solid lighten($primary-color, 2%);
			span {
				display: block;
				width: 100%;
			}

			&.liveEvent .status {
				background-color: #d80027;
			}
			&.newEvent .status {
				background-color: #4758a3;
			}
			&.liveEvent, &.newEvent {
				.status {
					font-size: rem-calc(10px);
					position: absolute;
					top: 0;
					left: 0;
					margin-left: 9px;
					display: inline-block;
					width: 30px;
					padding: 1px 2px;
					border-bottom-left-radius: 4px;
					border-bottom-right-radius: 4px;
				}
			}
		}

		.description {
			flex: 1;
			padding: .8rem;
			.label {
				border-radius: 4px;
				background-color: lighten($primary-color, 2%);
				margin-left: -4px;
			}
		}
		&.even .description .label {
			background-color: ($primary-color);
		}
		&.active .description .label {
			background-color: lighten($primary-color, 1%);
		}
		.summary {
			font-size: rem-calc(14px);
		}
	}
}

#showDisclaimerModal {
	a {
		text-decoration: underline;
	}
}

.footer {
	text-align: center;
	background: rgba(0,0,0,.02);
	border-top: 1px solid rgba(0,0,0,.05);
	a {
		padding: 1rem;
		font-size: rem-calc(12px);
	}
}

